k8s/wger/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wger-cache
  namespace: wger
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: wger-cache
  template:
    metadata:
      labels:
        app: wger-cache
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: redis
          image: docker.io/redis:8.10.2-alpine
          command:
            - redis-server
            - /etc/redis/redis.conf
          ports:
            - name: redis
              containerPort: 6379
          readinessProbe:
            exec:
              command: [redis-cli, ping]
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            exec:
              command: [redis-cli, ping]
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 320Mi
          volumeMounts:
            - name: config
              mountPath: /etc/redis/redis.conf
              subPath: redis.conf
              readOnly: true
            - name: data
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: wger-config
        - name: data
          persistentVolumeClaim:
            claimName: wger-redis
