k8s/wger/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wger
  namespace: wger
  annotations:
    argocd.argoproj.io/sync-wave: "3"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: wger.miksu.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wger
                port:
                  name: http
  tls:
    - hosts:
        - wger.miksu.app
      secretName: wger-tls
